--- a/about.html
+++ b/about.html
@@ -10,13 +10,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <nav class="navbar p-3">
+    <nav class="navbar bg-danger p-3">
+        <div class="container">
         <div class="logo"> 
         <a class="fs-1    text-light fw-bold " href="">2RINGS</a>
      </div>
      <div class="nav  d-flex align-items-center">
-         <a class="me-5  text-light  fs-5 text-capitalize" href="">Home</a>
-         <a class="me-5     fs-5 text-capitalize" href="/about.html">about</a>
+         <a class="me-5  text-light  fs-5 text-capitalize" href="home.html">Home</a>
+         <a class="me-5     fs-5 text-capitalize" href="about.html">about</a>
          <a class="me-5     fs-5 text-capitalize" href="servic.html">servise</a>
          <a class="me-5     fs-5 text-capitalize" href="blog.html">blog</a>
          <a class="me-5     fs-5 text-capitalize" href="contact.html">contact us</a>
@@ -24,8 +25,29 @@
          <i class="fa-solid fa-bars  "></i>
      </div>
  </nav>
- <div class="about bg-danger h-25">
-    <h2 class=" text-center text-capitalize fs-1">about</h2>
- </div> 
+</div>
+ <div style="height: 16vh;" class="web bg-dark d-flex align-items-center justify-content-center  text-light text-uppercase ">
+    <h2 class="fs-1">about </h2>
+
+    
+ </div>
+ <div class="about mt-5">
+    <div class="container">
+        <div class="about__contact ">
+            <div class="item m-lg-5 pt-3">
+            <img  src="/img/ring.png" alt="">
+<h2 class="fs-1 fw-bold">About Our Company</h2>
+<p class="w-75 mt-4 lh-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+<button class="mt-5 text-capitalize">reda more</button>
+            </div>
+            <div class="item">
+                <img class="img" src="/img/about.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+<div style="height: 10vh;" class="copyright  bg-dark align-items-center d-flex mt-5 justify-content-center  ">
+    <span class=" text-light">© 2019 All Rights Reserved. Free Html Templates</span>
+</div>
 </body>
 </html>
