--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,62 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <nav class="navbar bg-danger p-3">
+        <div class="container">
+        <div class="logo"> 
+        <a class="fs-1    text-light fw-bold " href="">2RINGS</a>
+     </div>
+     <div class="nav  d-flex align-items-center">
+         <a class="me-5  text-light  fs-5 text-capitalize" href="home.html">Home</a>
+         <a class="me-5     fs-5 text-capitalize" href="about.html">about</a>
+         <a class="me-5     fs-5 text-capitalize" href="servic.html">servise</a>
+         <a class="me-5     fs-5 text-capitalize" href="blog.html">blog</a>
+         <a class="me-5     fs-5 text-capitalize" href="contact.html">contact us</a>
+         <i class="fa-solid fa-magnifying-glass"></i>
+         <i class="fa-solid fa-bars  "></i>
+     </div>
+ </nav>
+</div>
+ <div style="height: 16vh;" class="web bg-dark d-flex align-items-center justify-content-center  text-light text-uppercase ">
+    <h2 class="fs-1">contact us </h2>
+
+ </div>
+
+ <div class="footer bg-dark">
+    <div class="container">
+        <div class="top-  ">
+            <img class="m-lg-5" src="/img/logo_footer.png" alt="">
+            <a class="text-decoration-none text-danger m-lg-5  fs-5" href="">
+                <i class="fa-solid fa-location-dot  m-lg-4"></i>Gb road 123 london Uk   
+            </a>
+            <a class="text-decoration-none text-danger m-lg-3 fs-5" href="">
+                <i class="fa-solid fa-phone-volume m-lg-4"></i>
+                G(+01) 123456789012
+            </a>
+            <a class="text-decoration-none text-danger m-lg-3 fs-5" href=""><i class="fa-solid fa-envelope m-lg-4"></i>demo@gmail.com</a>
+        </div>
+        <div class="footer__contact">
+           <div class="item">
+            <h2 class="text-light  fs-1  fw-bold  mt-5">Contact Us</h2>
+            <input type="text" placeholder="name">
+            <input type="phone number    " placeholder="phone number">
+            <input type="email" placeholder="email">
+            <textarea placeholder="message"></textarea>
+            <button>send</button>
+            <i class="fa-brands fa-facebook "></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-solid fa-camera"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+           </div>
+           <div class="item mt-5">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11128.436358666635!2d71.76792863756414!3d40.37903794882433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38bb849f74579c91%3A0x58a5f62abaf90bad!2sAziya%20Mehmonxonasi!5e1!3m2!1suz!2s!4v1702916508732!5m2!1suz!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           </div>
+        </div>
+    </div>
+   
+</div>
+<div style="height: 10vh ;" class="copyright mt-5 bg-dark d-flex align-items-center justify-content-center text-center">
+    <span class=" text-light">© 2019 All Rights Reserved. Free Html Templates</span>
+</div>
 </body>
 </html>
