--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>2ringstn</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsiv.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
                        <a class="fs-1    text-light fw-bold " href="">2RINGS</a>
                     </div>
                     <div class="nav  d-flex align-items-center">
-                        <a class="me-5  text-light  fs-5 text-capitalize" href="">Home</a>
+                        <a class="me-5  text-light  fs-5 text-capitalize" href="home.html">Home</a>
                         <a class="me-5     fs-5 text-capitalize" href="about.html">about</a>
                         <a class="me-5     fs-5 text-capitalize" href="servic.html">servise</a>
                         <a class="me-5     fs-5 text-capitalize" href="blog.html">blog</a>
