--- a/servic.html
+++ b/servic.html
@@ -10,6 +10,66 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <nav class="navbar bg-danger p-3">
+        <div class="container">
+        <div class="logo"> 
+        <a class="fs-1    text-light fw-bold " href="">2RINGS</a>
+     </div>
+     <div class="nav  d-flex align-items-center">
+         <a class="me-5  text-light  fs-5 text-capitalize" href="home.html">Home</a>
+         <a class="me-5     fs-5 text-capitalize" href="about.html">about</a>
+         <a class="me-5     fs-5 text-capitalize" href="servic.html">servise</a>
+         <a class="me-5     fs-5 text-capitalize" href="blog.html">blog</a>
+         <a class="me-5     fs-5 text-capitalize" href="contact.html">contact us</a>
+         <i class="fa-solid fa-magnifying-glass"></i>
+         <i class="fa-solid fa-bars  "></i>
+     </div>
+ </nav>
+</div>
+ <div style="height: 16vh;" class="web bg-dark d-flex align-items-center justify-content-center  text-light text-uppercase ">
+    <h2 class="fs-1">servise </h2>
+
     
+ </div>
+
+ <div class="plane pt-5 ">
+    <div class="container">
+
+        <div class="title text-center mt-5 ">
+            <img  src="/img/ring.png" alt="">
+            <h2 class="fs-1 fw-bold mt-1">Our Plane</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod t dolor in reprehenderit in voluptate</p>
+        </div>
+        <div class="plane__contact  ">
+            <div class="item text-center ">
+                <div class="img">
+                <img class="mt-4" src="/img/plan_img.jpg" alt="">
+                </div>
+                <h5 class="mt-5  fw-bold">FLOWER DECORATIONS</h5>
+                <p class="text-light lh-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod t dolor in reprehenderit in voluptate</p>
+                <button>read more</button>
+            </div>
+            <div class="item text-center">
+                <div class="img">
+                <img class="mt-4" src="/img/plan_img1.jpg" alt="">
+                </div>
+                <h5 class="mt-5  fw-bold">FLOWER DECORATIONS</h5>
+                <p class="text-light lh-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod t dolor in reprehenderit in voluptate</p>
+                <button>read more</button>
+            </div>
+            <div class="item text-center ">
+                <div class="img">
+                <img class="mt-4" src="/img/plan_img2.jpg" alt="">
+                </div>
+                <h5 class="mt-5  fw-bold">FLOWER DECORATIONS</h5>
+                <p class="text-light lh-6  ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod t dolor in reprehenderit in voluptate</p>
+                <button>read more</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div style="height: 10vh;" class="copyright mt-5  bg-dark align-items-center d-flex mt-5 justify-content-center  ">
+    <span class=" text-light">© 2019 All Rights Reserved. Free Html Templates</span>
+</div>
 </body>
 </html>
