--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,60 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <nav class="navbar bg-danger p-3">
+        <div class="container">
+        <div class="logo"> 
+        <a class="fs-1    text-light fw-bold " href="">2RINGS</a>
+     </div>
+     <div class="nav  d-flex align-items-center">
+         <a class="me-5  text-light  fs-5 text-capitalize" href="home.html">Home</a>
+         <a class="me-5     fs-5 text-capitalize" href="about.html">about</a>
+         <a class="me-5     fs-5 text-capitalize" href="servic.html">servise</a>
+         <a class="me-5     fs-5 text-capitalize" href="blog.html">blog</a>
+         <a class="me-5     fs-5 text-capitalize" href="contact.html">contact us</a>
+         <i class="fa-solid fa-magnifying-glass"></i>
+         <i class="fa-solid fa-bars  "></i>
+     </div>
+ </nav>
+</div>
+ <div style="height: 16vh;" class="web bg-dark d-flex align-items-center justify-content-center  text-light text-uppercase ">
+    <h2 class="fs-1">blog </h2>
+
+ </div>
+ <div class="blog">
+    <div class="container">
+        
+            <div class="title text-center mt-5 pt-5">
+                <img  src="/img/ring.png" alt="">
+                <h2 class="fs-1 fw-bold mt-2">FROM THE BLOG </h2>
+            </div>
+            <div class="blog__contact mt-5 d-flex align-items-center">
+                <div  class="item"><img class="mt-4"  src="img/blog_img1.jpg" alt="">
+                     <button class="btn btn-danger  fs-4 ">06 feb</button></div>
+                <div class="item">
+                    <span class="fs-5">Post by : Marriage </span>
+                    <h3 class="mt-3 fw-bold">Tempor incididunt ut labore et dolore </h3>
+                    <p class="mt-4 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore </p>
+                    <a  href="">Like</a>
+                    <a class="m-lg-4" href="">Comment</a>
+            </div>
+            </div>
+            <div class="blog__contact mt-5 d-flex align-items-center">
+                <div  class="item"><img class="mt-4"  src="img/blog_img2.jpg" alt="">
+                     <button class="btn btn-danger  fs-4 ">06 feb</button></div>
+                <div class="item">
+                    <span class="fs-5">Post by : Marriage </span>
+                    <h3 class="mt-3 fw-bold">Tempor incididunt ut labore et dolore </h3>
+                    <p class="mt-4 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore </p>
+                    <a   href="">Like</a>
+                    <a class="m-lg-4"  href="">Comment</a>
+
+            </div>
+            </div>
+    </div>
+</div>
+<div style="height: 10vh;" class="copyright  bg-dark align-items-center d-flex mt-5 justify-content-center  ">
+    <span class=" text-light">© 2019 All Rights Reserved. Free Html Templates</span>
+</div>
 </body>
 </html>
